drawable resize done and add remainder in firestore

--- a/app/src/main/res/layout/product_item_grid.xml
+++ b/app/src/main/res/layout/product_item_grid.xml
@@ -21,15 +21,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:drawableEnd="@drawable/ic_date"
-            android:padding="10dp"
+            android:drawableEnd="@drawable/new_date"
+            android:drawablePadding="5dp"
+            android:padding="1dp"
             android:text="date"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textColor="#221D1D"
             android:textColorHighlight="@color/colorPrimary"
             android:textSize="@dimen/textsize_medium"
-            android:textStyle="italic|bold"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
             app:layout_constraintTop_toTopOf="@id/constraint_customer_item1" />
 
@@ -38,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:adjustViewBounds="true"
-            android:padding="10dp"
+            android:padding="5dp"
             android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
@@ -49,12 +50,13 @@
             android:id="@+id/mtvProductName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="1dp"
             android:text="@string/name"
             android:textAlignment="center"
             android:textAllCaps="true"
+            android:textSize="@dimen/textsize_xlarge"
             android:textColor="#221D1D"
-            android:textSize="@dimen/textsize_xxlarge"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image_product" />
@@ -63,11 +65,11 @@
             android:id="@+id/mtvProductQuantity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="1dp"
             android:text="@string/quantity"
             android:textAlignment="center"
             android:textColor="#221D1D"
-            android:textSize="@dimen/textsize_xlarge"
+            android:textSize="@dimen/textsize_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/mtvProductName" />
@@ -76,7 +78,7 @@
             android:id="@+id/mtvProductPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="1dp"
             android:text="@string/price"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_medium"
@@ -87,7 +89,7 @@
             android:id="@+id/mtvProductTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:padding="1dp"
             android:background="@color/colorPrimary"
             android:textColor="#221D1D"
             android:text="@string/total"
