--- a/app/src/main/res/layout/product_item_details.xml
+++ b/app/src/main/res/layout/product_item_details.xml
@@ -22,15 +22,16 @@
             android:id="@+id/mtvProductOrderDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_date"
+            android:drawableEnd="@drawable/new_date"
             android:padding="5dp"
             android:text="date"
+            android:drawablePadding="5dp"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textColor="#221D1D"
             android:textColorHighlight="@color/colorPrimary"
             android:textSize="@dimen/textsize_medium"
-            android:textStyle="italic|bold"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
             app:layout_constraintLeft_toRightOf="@id/image_product"
             app:layout_constraintTop_toTopOf="@id/constraint_customer_item1" />
@@ -38,7 +39,7 @@
         <ImageView
             android:id="@+id/image_product"
             android:layout_width="160dp"
-            android:layout_height="125dp"
+            android:layout_height="105dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
@@ -55,7 +56,7 @@
             android:textAllCaps="true"
             android:textColor="#221D1D"
             android:padding="1dp"
-            android:textSize="@dimen/textsize_xxlarge"
+            android:textSize="@dimen/textsize_xlarge"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@id/image_product"
             app:layout_constraintTop_toBottomOf="@id/mtvProductOrderDate" />
@@ -68,7 +69,7 @@
             android:textColor="#221D1D"
             android:layout_marginStart="5dp"
             android:padding="1dp"
-            android:textSize="@dimen/textsize_xlarge"
+            android:textSize="@dimen/textsize_large"
             app:layout_constraintLeft_toRightOf="@id/image_product"
             app:layout_constraintTop_toBottomOf="@id/mtvProductName" />
 
