Adding View Pager and tab layout with collapsing toolbar done

--- a/app/src/main/res/navigation/nav_customer.xml
+++ b/app/src/main/res/navigation/nav_customer.xml
@@ -3,38 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_nav"
-    app:startDestination="@id/loginFragment">
-
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.example.customerfirebase.ui.fragment.LoginFragment"
-        tools:layout="@layout/fragment_login">
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_customerDashboardFragment"
-            app:destination="@id/customerDashboardFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.example.customerfirebase.ui.fragment.RegisterFragment"
-        tools:layout="@layout/fragment_registration">
-        <action
-            android:id="@+id/action_registerFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/customerRegistrationFragment"
-        android:name="com.example.customerfirebase.ui.fragment.CustomerRegistrationFragment"
-        tools:layout="@layout/fragment_customer_registration">
-        <action
-            android:id="@+id/action_customerRegistrationFragment_to_customerDashboardFragment"
-            app:destination="@id/customerDashboardFragment" />
-    </fragment>
-
+    app:startDestination="@id/customerDetailsFragment">
 
     <fragment
         android:id="@+id/productDetailsFragment"
@@ -62,9 +31,6 @@
         <action
             android:id="@+id/action_productInsertFragment_to_customerDetailsFragment"
             app:destination="@id/customerDetailsFragment" />
-        <action
-            android:id="@+id/action_productInsertFragment_to_customerDetailFragment"
-            app:destination="@id/customerDetailFragment" />
     </fragment>
 
     <fragment
@@ -105,6 +71,7 @@
             android:id="@+id/action_customerDetailsFragment_to_productDetailsFragment"
             app:destination="@id/productDetailsFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/customerDetailFragment"
         android:name="com.example.customerfirebase.ui.fragment.CustomerDetailFragment"
@@ -118,11 +85,5 @@
         <action
             android:id="@+id/action_customerDetailFragment_to_customerDetailsFragment"
             app:destination="@id/customerDetailsFragment" />
-        <action
-            android:id="@+id/action_customerDetailFragment_to_productDetailsFragment"
-            app:destination="@id/productDetailsFragment" />
-        <action
-            android:id="@+id/action_customerDetailFragment_to_productInsertFragment"
-            app:destination="@id/productInsertFragment" />
     </fragment>
 </navigation>
