--- a/app/src/main/res/layout/order_item_list.xml
+++ b/app/src/main/res/layout/order_item_list.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,6 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:background="@color/colorPrimary"
     android:padding="3dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,12 +20,11 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductOrderDate"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
             android:drawableEnd="@drawable/new_date"
             android:drawablePadding="5dp"
-            android:padding="1dp"
+            android:padding="5dp"
             android:text="date"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
@@ -32,90 +33,74 @@
             android:textSize="@dimen/textsize_medium"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
+            app:layout_constraintLeft_toRightOf="@id/image_product"
             app:layout_constraintTop_toTopOf="@id/constraint_customer_item1" />
 
         <ImageView
             android:id="@+id/image_product"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_width="160dp"
+            android:layout_height="105dp"
             android:adjustViewBounds="true"
-            android:padding="5dp"
             android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
-            app:layout_constraintTop_toBottomOf="@id/mtvProductOrderDate"
+            app:layout_constraintTop_toTopOf="@id/constraint_customer_item1"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:padding="1dp"
             android:text="@string/name"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textSize="@dimen/textsize_xlarge"
             android:textColor="#221D1D"
+            android:textSize="@dimen/textsize_xlarge"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_product" />
+            app:layout_constraintLeft_toRightOf="@id/image_product"
+            app:layout_constraintTop_toBottomOf="@id/mtvProductOrderDate" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductQuantity"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
             android:padding="1dp"
             android:text="@string/quantity"
-            android:textAlignment="center"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_large"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/image_product"
             app:layout_constraintTop_toBottomOf="@id/mtvProductName" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="1dp"
+            android:layout_marginStart="5dp"
+            android:padding="3dp"
             android:text="@string/price"
             android:textColor="#221D1D"
             android:textSize="@dimen/textsize_medium"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/image_product"
             app:layout_constraintTop_toBottomOf="@id/mtvProductQuantity" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/mtvProductTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="1dp"
             android:background="@color/colorPrimary"
-            android:textColor="#221D1D"
+            android:padding="3dp"
             android:text="@string/total"
+            android:textColor="#221D1D"
             android:textSize="@dimen/textsize_medium"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
             app:layout_constraintLeft_toRightOf="@id/mtvProductPrice"
             app:layout_constraintTop_toBottomOf="@id/mtvProductQuantity" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/mbPurchase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="#03756A"
-            android:backgroundTint="#03756A"
-            android:padding="3dp"
-            android:text="Purchase"
-            android:textColor="#221D1D"
-            android:textSize="@dimen/textsize_large"
-            app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
-            app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
-            app:layout_constraintTop_toBottomOf="@id/mtvProductPrice" />
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
+
 
 
 
