--- a/app/src/main/res/layout/order_item_list.xml
+++ b/app/src/main/res/layout/order_item_list.xml
@@ -89,10 +89,9 @@
             android:id="@+id/mtvProductTotal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             android:padding="3dp"
             android:text="@string/total"
-            android:textColor="#221D1D"
+            android:textColor="@color/colorPrimary"
             android:textSize="@dimen/textsize_medium"
             app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
             app:layout_constraintLeft_toRightOf="@id/mtvProductPrice"
