--- a/app/src/main/res/layout/product_item_grid.xml
+++ b/app/src/main/res/layout/product_item_grid.xml
@@ -5,8 +5,8 @@
     android:id="@+id/card_view_customer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:padding="3dp">
+    android:layout_margin="8dp"
+    android:padding="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraint_customer_item1"
@@ -25,6 +25,7 @@
             android:drawablePadding="5dp"
             android:padding="1dp"
             android:text="date"
+            android:visibility="invisible"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textColor="#221D1D"
@@ -90,8 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="1dp"
-            android:background="@color/colorPrimary"
-            android:textColor="#221D1D"
+            android:textColor="@color/colorPrimary"
             android:text="@string/total"
             android:textSize="@dimen/textsize_medium"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,14 +100,18 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/mbPurchase"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="#03756A"
-            android:backgroundTint="#03756A"
-            android:padding="3dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/shape_rounded_lightblue_filled_noborder"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             android:text="Purchase"
-            android:textColor="#221D1D"
             android:textSize="@dimen/textsize_large"
             app:layout_constraintEnd_toEndOf="@id/constraint_customer_item1"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
