--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,12 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/mnuOrderList"
-        android:title="Order List" />
+        android:id="@+id/mnuPurchse"
+        android:title="Purchase" />
     <item
-        android:id="@+id/mnuProductList"
-        android:title="Product List" />
-    <item
-        android:id="@+id/mnuRemainderList"
-        android:title="Remainder List" />
+        android:id="@+id/mnuAddToCart"
+        android:title="Add To Cart" />
+
 </menu>
